--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -5,8 +5,8 @@
 .container {
   position: relative; }
 
-.btn {
-  margin-bottom: 0.5rem; }
+/*.btn {
+  margin-bottom: 0.5rem; }*/
   .btn + .btn {
     margin-left: 1rem; }
   @media (max-width: 767px) {
