type text to tel change
type text to tel change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
           <br>
           <div class="form-group">  
             <label for="full_name_id" width="100%" >Phone No.</label>
-            <input type="text" width="100%" id="" name="phone" placeholder="Enter Phone No." required />
+            <input type="tel" width="100%" id="" name="phone" placeholder="Enter Phone No." required />
           </div>
           <br>
           <div class="form-group"> 
