--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,70 +61,53 @@
                     </div>
 
 <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-          <h4 class="modal-title">Welcome! Please Fill The Below Form</h4>
-        </div>
-        <div class="modal-body">
-          
-
-
-
-
-
-
-
-        <form action="/email" method="post">
-       <div class="col-lg-6">
-         <div class="form-group"> 
-            <label for="full_name_id" width="100%" >First Name</label>
-               <input type="text" width="100%"  id="" name="fname" placeholder="Enter First Name" required />
-             </div>
-             <br>
-              <div class="form-group"> 
-               <label for="full_name_id" width="100%" >Last Name</label>
-               <input type="text" width="100%"  id="" name="lname" placeholder="Enter Last Name" required />
-             </div>
-             <br>
-           <div class="form-group"> 
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+        <h4 class="modal-title">Welcome! Please Fill The Below Form</h4>
+      </div>
+      <div class="modal-body">
+        <form action="/email" method="post" style="width: 100%; text-align: left;">
+          <div class="col-lg-12">
+            <div class="form-group"> 
+              <label for="full_name_id" width="100%" >First Name</label>
+              <input type="text" class="form-control" width="100%"  id="" name="fname" placeholder="Enter First Name" required />
+            </div>
+          <br>
+          <div class="form-group"> 
+            <label for="full_name_id" width="100%" >Last Name</label>
+            <input type="text" class="form-control" width="100%"  id="" name="lname" placeholder="Enter Last Name" required />
+          </div>
+          <br>
+          <div class="form-group"> 
             <label for="full_name_id" width="100%" >Email Id</label>
-            <input type="text" width="100%"  id="" name="email" placeholder="Enter Email" required />
+            <input type="text" class="form-control" width="100%"  id="" name="email" placeholder="Enter Email" required />
           </div>
           <br>
           <div class="form-group">  
             <label for="full_name_id" width="100%" >Phone No.</label>
-            <input type="tel" width="100%" id="" name="phone" placeholder="Enter Phone No." required />
+            <input type="tel" class="form-control" width="100%" id="" name="phone" placeholder="Enter Phone No." required />
           </div>
           <br>
           <div class="form-group"> 
             <label for="full_name_id" width="100%" >Message</label>
-            <input type="text" width="100%"  id="" name="message" placeholder="Enter Message" required />
+            <input type="text" class="form-control" width="100%"  id="" name="message" placeholder="Enter Message" required />
           </div>
           <br>
-       </div>
-
-     
-
-
-<button type="submit" class="btn btn-primary">Submit</button>
-</form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" id="dis" data-dismiss="modal">Close</button>
-          
-        </div>
-        
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal --> 
-
-
-
-
-
+          </div>
+          <div class="col-lg-12 text-center">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+     <!--  <div class="modal-footer">
+        <button type="button" class="btn btn-default" id="dis" data-dismiss="modal">Close</button>
+      </div> -->
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal --> 
 
   <!-- second Modal -->
   <a href="#myMo" data-toggle="modal" id="success" style="display: none" class="btn btn-primary">Co</a>
